Fixed game statistics bug to correctly show losses and ties
-Added new functions to winLogic to return if X or O won the game
-Added tie game statistic to index.html
-Corrected game stat logic to determine user win only if X won
-Corrected game stat logic to determine user loss only if O won
-Corrected game stat logic to determine user tie

--- a/index.html
+++ b/index.html
@@ -122,6 +122,7 @@
         <p id="total-games-finished"></p>
         <p id="total-games-abandoned"></p>
         <p id="total-games-won"></p>
+        <p id="total-games-tied"></p>
         <p id="total-games-lost"></p>
       </section>
     </div>
