--- a/index.html
+++ b/index.html
@@ -12,24 +12,37 @@
       <script src="public/application.js" type="text/javascript" charset="utf-8" defer></script>
     </head>
     <body>
-      <div class="container">
-        <div class="header clearfix">
-          <nav>
-            <ul class="nav nav-pills pull-right">
-              <li class="home-nav" role="presentation" ><a href="#">Home</a></li>
-              <li class="new-game-nav" role="presentation"><a href="#">Play A Game</a></li>
-              <li class="game-stats-nav" role="presentation"><a href="#">Game Statistics</a></li>
-              <li class="dropdown">
-                <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Account <span class="caret"></span></a>
-                <ul class="dropdown-menu">
-                  <li class="change-password-nav"><a href="#">Change Password</a></li>
-                  <li role="separator" class="divider"></li>
-                  <li class="sign-out-nav"><a href="#">Sign Out</a></li>
+      <div class="container-fluid">
+        <!-- <div class="header clearfix"> -->
+          <nav class="navbar navbar-default">
+            <div class="container-fluid">
+              <div class="navbar-header">
+                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+                  <span class="sr-only">Toggle navigation</span>
+                  <span class="icon-bar"></span>
+                  <span class="icon-bar"></span>
+                  <span class="icon-bar"></span>
+                </button>
+                <a class="navbar-brand">Tic Tac Toe</a>
+              </div>
+              <div id="navbar" class="navbar-collapse collapse" data-toggle="collapse" data-target="#navbar" >
+                <ul class="nav navbar-nav navbar-right">
+                  <li class="home-nav" role="presentation" ><a href="#">Home</a></li>
+                  <li class="new-game-nav" role="presentation"><a href="#">Play A Game</a></li>
+                  <li class="game-stats-nav" role="presentation"><a href="#">Game Statistics</a></li>
+                  <li class="dropdown">
+                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Account <span class="caret"></span></a>
+                    <ul class="dropdown-menu">
+                      <li class="change-password-nav"><a href="#">Change Password</a></li>
+                      <li role="separator" class="divider"></li>
+                      <li class="sign-out-nav"><a href="#">Sign Out</a></li>
+                    </ul>
                 </ul>
-            </ul>
+              </div>
+            </div>
           </nav>
-          <h3 class="text-muted">Tic Tac Toe</h3>
-      </div>
+
+      <!-- </div> -->
 
     <div class="main-section">
     <div class="jumbotron">
